<resources>
    <string name="app_name">eMRTD Reader</string>
    <string name="title_activity_main">eMRTD Reader</string>
    <string name="mrz_scan_title">Scan MRZ</string>
    <string name="nfc_read_title">NFC Reading</string>
    <string name="result_title">Document Information</string>
    <string name="scan_passport_mrz">Scan the MRZ of your passport</string>
    <string name="place_passport_nfc">Place your passport near the back of your device</string>
    <string name="reading_data">Reading data from passport...</string>
    <string name="passport_data">Passport Data</string>
    <string name="name">Name:</string>
    <string name="passport_number">Passport Number:</string>
    <string name="nationality">Nationality:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="expiry_date">Expiry Date:</string>
    <string name="personal_number">Personal Number:</string>
    <string name="mrz_data">MRZ Data:</string>
    <string name="signature_valid">Signature: VALID</string>
    <string name="signature_invalid">Signature: INVALID</string>
    <string name="signature_not_verified">Signature: NOT VERIFIED</string>
    <string name="start_scan">Start Scan</string>
    <string name="retry_scan">Retry Scan</string>
    <string name="continue_to_nfc">Continue to NFC</string>
    <string name="read_nfc">Read NFC Chip</string>
    <string name="verify_passport">Verify Passport</string>
    <string name="camera_permission_required">Camera permission is required to scan MRZ</string>
    <string name="nfc_not_available">NFC is not available on this device</string>
    <string name="error_reading_passport">Error reading passport</string>
    <string name="passport_verified">Passport Verified</string>
    <string name="passport_not_verified">Passport NOT Verified</string>
    <string name="valid">VALID</string>
    <string name="invalid">INVALID</string>
    <string name="not_verified">NOT VERIFIED</string>
    <string name="progress_reading">Reading: %1$s</string>
    <string name="progress_complete">Reading Complete</string>
    <string name="mrz_success">MRZ Successfully Read</string>
    <string name="nfc_success">NFC Data Successfully Read</string>
    <string name="verification_success">Verification Successful</string>
    <string name="verification_failed">Verification Failed</string>
</resources>